# alpha-azimuth

./: .gitignore  azimuth.env  debug_printer.py  environment.yml  test_thomas.ipynb
ALPHA/dirichlet/: hdbs.py  leiden.py  trajclus_features.py
ALPHA/obstacle/: obstacle.py  policy.py  reception.py
ALPHA/treesearch/: eval.py  tree.py
MARTINI/: azimuth.env
MARTINI/aircraft/: flight_plan.py  test_trajectory.ipynb  test_trajectory_simple.ipynb  trajectory.py  trajectory_simple.py  wf_dynamics.legacypy  wf_dynamics.py
MARTINI/airspace/: conflict.py  conflict_cartesian.py  conflict_test_c.ipynb  conflict_test_c.py  conflict_test_p.py  geo.py  intersect.py  randomize_airspace.py  test_conflict.ipynb  test_get_airspace.ipynb  traffic_fir.py
MARTINI/arrivals/: markov.py  test_thomas.ipynb  thomas.py
MARTINI/arrivals/.ipynb_checkpoints/: test_thomas-checkpoint.ipynb
MARTINI/atmosphere/: isa.py
MARTINI/definitions/: trajectory.py
MARTINI/scenario/: flow_establishment.ipynb  flow_hdbs.ipynb  flow_leiden.ipynb  flow_leiden_on_ADSB_geometry_only.ipynb  flow_scaling.ipynb  flow_scaling_inspect.ipynb  obstacle_avoidance.ipynb
MARTINI/sim/: eval_airspace.py
POTIK/hourly_segments/: 1716771600_1716771600.csv  1717423200_1717423200.csv  1717632000_1717632000.csv  1717848000_1717848000.csv  1717981200_1717981200.csv  1718193600_1718193600.csv  1718496000_1718496000.csv
VERICONF/: CMakeLists.txt  conflict_checker.cpp  setup.py
data/hourly/: 1717848000.csv
